--- a/properties.conf
+++ b/properties.conf
@@ -1,4 +1,7 @@
 # The String that will be appended to the input (won't get passed to executed program, just for cosmetics)
-BLOCK=rilsh
+# [DEFAULT: rilsh, possible values: .USERNAME, any]
+BLOCK=.USERNAME
 # Choose, if you want to run the terminal in debug mode (true/false)
 DEBUG=false
+# Change this, if you want the console to break after code execution, change this. (true, false)
+EXEC=true
