--- a/properties.conf
+++ b/properties.conf
@@ -1,4 +1,4 @@
 # The String that will be appended to the input (won't get passed to executed program, just for cosmetics)
 BLOCK=rilsh
-# Choose, if you want to run the terminal in debug mode (true/false). Overrides --debug/-d
+# Choose, if you want to run the terminal in debug mode (true/false).
 DEBUG=false
