improved cd, improved property handling, bugged block output
...and ctrl-c bugs. disabled now.

--- a/properties.conf
+++ b/properties.conf
@@ -1,9 +1,7 @@
 # The String that will be appended to the input
 # (won't get passed to executed program, just for cosmetics)
-# [DEFAULT: rilsh, possible values: .USERNAME, any]
-BLOCK=.USERNAME
-# Choose, if you want to run the terminal in debug mode (true/false)
-BLOCK=rilsh
+# [DEFAULT: rilsh, possible values: .USERNAME, .DIR, any]
+BLOCK=rilsh beta>
 # Choose, if you want to run the terminal in debug mode (true/false). Overrides --debug/-d
 DEBUG=false
 # Change this, if you want the console to break after code execution, change this. (true, false)
