Idk what I did here, but it made this commitworthy

--- a/properties.conf
+++ b/properties.conf
@@ -1,8 +1,9 @@
 # The String that will be appended to the input
 # (won't get passed to executed program, just for cosmetics)
 # [DEFAULT: rilsh, possible values: .USERNAME, .DIR, any]
-BLOCK=READY 
+BLOCK=.DIR
 # Choose, if you want to run the terminal in debug mode (true/false). Overrides --debug/-d
 DEBUG=false
 # Specify a Name for your shell
 NAME=klean
+
