--- a/properties.conf
+++ b/properties.conf
@@ -1,7 +1,7 @@
 # The String that will be appended to the input
 # (won't get passed to executed program, just for cosmetics)
 # [DEFAULT: rilsh, possible values: .USERNAME, .DIR, any]
-BLOCK=.DIR
+BLOCK=READY 
 # Choose, if you want to run the terminal in debug mode (true/false). Overrides --debug/-d
 DEBUG=false
 # Specify a Name for your shell
